[build-system]
requires = ["setuptools">=39.2, "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = citi_bikeshare_data_streamer
version = 0.0.1

[options]
zip_safe = False
packages = find:
install_requires = 
    requests
    boto3
    argparse
include_package_data = True

[options.entry_points]
console_scripts = 
    cbds = scripts.main:cli